# -social-network-server-and-client

./: README.md
Client/: CMakeLists .txt  CMakeLists.txt  makefile
Client/include/: Client.h  ConnectionHandler.h
Client/src/: Client.cpp  ClientMain.cpp  ConnectionHandler.cpp
Server/src/main/java/bgu/spl/net/: DataBase.java
Server/src/main/java/bgu/spl/net/Messages/: AckMessage.java  ErrorMessage.java  FollowMessage.java  LoginMessage.java  LogoutMessage.java  Message.java  NotificationMessage.java  PmMessage.java  PostMessage.java  RegisterMessage.java  StatMessage.java  UserListMessage.java
Server/src/main/java/bgu/spl/net/impl/BGSServer/: BGSEncoderDecoder.java  BGSProtocol.java  EchoClient.java  ReactorMain.java  TPCMain.java
Server/src/main/java/bgu/spl/net/impl/BGSTPC/: BGSEncoderDecoder.java  BGSProtocol.java  BGSTpc.java  EchoClient.java  ReactorMain.java
Server/src/main/java/bgu/spl/net/impl/Database/: Datastructure.java  User.java
Server/src/main/java/bgu/spl/net/impl/newsfeed/: NewsFeedServerMain.java
Server/src/main/java/bgu/spl/net/srv/: BaseServer.java  BlockingConnectionHandler.java  ConnectionHandler.java  ConnectionsImpl.java  NonBlockingConnectionHandler.java  Reactor.java
